--- a/Pitch/Base.lproj/Main.storyboard
+++ b/Pitch/Base.lproj/Main.storyboard
@@ -1,24 +1,90 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Master View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MasterViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UeD-SB-W7W">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </scrollView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" spacing="108" translatesAutoresizingMaskIntoConstraints="NO" id="JWa-FU-lnW">
+                                <rect key="frame" x="30" y="802" width="354" height="30"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="28K-dE-5Xe">
+                                        <rect key="frame" x="0.0" y="0.0" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="30" id="dVZ-Lg-01i"/>
+                                            <constraint firstAttribute="height" constant="30" id="exq-Lk-o4D"/>
+                                        </constraints>
+                                        <state key="normal" title="Button" image="event"/>
+                                        <connections>
+                                            <action selector="createNewEventButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AsP-MM-Dok"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ghC-zz-jxN">
+                                        <rect key="frame" x="162" y="0.0" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="bSH-Tn-sOK"/>
+                                            <constraint firstAttribute="width" constant="30" id="t43-tn-JX6"/>
+                                        </constraints>
+                                        <state key="normal" title="Button" image="menu"/>
+                                        <connections>
+                                            <action selector="exploreButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IQ8-Vs-sP8"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kh9-Qf-thG">
+                                        <rect key="frame" x="324" y="0.0" width="30" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="30" id="0KI-wZ-Zv2"/>
+                                            <constraint firstAttribute="height" constant="30" id="VVs-OU-LyC"/>
+                                        </constraints>
+                                        <state key="normal" title="Button" image="user"/>
+                                        <connections>
+                                            <action selector="profileButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="K46-aS-EWR"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="UeD-SB-W7W" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="1g2-iu-uo1"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="JWa-FU-lnW" secondAttribute="trailing" constant="30" id="3Oh-L2-tnp"/>
+                            <constraint firstItem="UeD-SB-W7W" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Hl1-7a-gr4"/>
+                            <constraint firstItem="JWa-FU-lnW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="SCn-7I-Ud9"/>
+                            <constraint firstItem="JWa-FU-lnW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="30" id="SfI-sq-s9V"/>
+                            <constraint firstAttribute="bottom" secondItem="UeD-SB-W7W" secondAttribute="bottom" id="btT-Y5-QjP"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="JWa-FU-lnW" secondAttribute="bottom" constant="30" id="fIq-sT-duE"/>
+                            <constraint firstAttribute="trailing" secondItem="UeD-SB-W7W" secondAttribute="trailing" id="klq-Rk-8Zd"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="viewControllerScrollView" destination="UeD-SB-W7W" id="f1c-wn-usm"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="155.07246376811597" y="20.758928571428569"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="event" width="563" height="530"/>
+        <image name="menu" width="697" height="601"/>
+        <image name="user" width="691" height="610"/>
+    </resources>
 </document>
