--- a/Pitch/View Controllers/UserViewController.xib
+++ b/Pitch/View Controllers/UserViewController.xib
@@ -12,9 +12,13 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="UserViewController">
             <connections>
+                <outlet property="FBLoginButtonOutlet" destination="YIs-nu-tgA" id="Z76-gt-ctb"/>
+                <outlet property="backButtonOutlet" destination="gkc-M1-UIn" id="MxA-Ua-tGb"/>
+                <outlet property="continueButtonOutlet" destination="1AJ-8M-kvn" id="cvg-8t-gSx"/>
+                <outlet property="emailTextField" destination="bDO-01-iRM" id="lbL-6S-eKm"/>
                 <outlet property="orSeparatorLabel" destination="v9c-Fa-rFb" id="lQ5-pB-mmR"/>
-                <outlet property="profilePicImageView" destination="boo-eo-Vld" id="mwv-Fj-OJ0"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
+                <outlet property="welcomingMessageLabel" destination="XKO-qq-iRG" id="fAd-9y-fHB"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -22,50 +26,78 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="boo-eo-Vld">
-                    <rect key="frame" x="147" y="69" width="80" height="80"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    <color key="backgroundColor" red="0.55634254220000001" green="0.97934550050000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Welcome Message" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XKO-qq-iRG">
-                    <rect key="frame" x="88" y="213" width="211" height="30"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome Message" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XKO-qq-iRG">
+                    <rect key="frame" x="85" y="176.5" width="205" height="30"/>
                     <fontDescription key="fontDescription" type="system" pointSize="25"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1AJ-8M-kvn">
-                    <rect key="frame" x="157" y="398" width="73" height="34"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1AJ-8M-kvn">
+                    <rect key="frame" x="151" y="316.5" width="73" height="34"/>
                     <color key="backgroundColor" red="0.55634254220000001" green="0.97934550050000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <state key="normal" title="Continue">
                         <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                     </state>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                            <integer key="value" value="10"/>
+                            <integer key="value" value="5"/>
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
                     <connections>
-                        <action selector="continueButton:" destination="-1" eventType="touchUpInside" id="WHK-at-eBD"/>
+                        <action selector="continueButtonAction:" destination="-1" eventType="touchUpInside" id="WHK-at-eBD"/>
                     </connections>
                 </button>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="- OR -" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v9c-Fa-rFb">
-                    <rect key="frame" x="168" y="448" width="51" height="22"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                <textField opaque="NO" alpha="0.5" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bDO-01-iRM">
+                    <rect key="frame" x="90" y="261.5" width="195" height="30"/>
+                    <nil key="textColor"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits"/>
+                </textField>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="- OR -" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v9c-Fa-rFb">
+                    <rect key="frame" x="162" y="368.5" width="51" height="22"/>
                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Kcc-Xf-KNl">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                </navigationBar>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YIs-nu-tgA" customClass="FBSDKLoginButton">
+                    <rect key="frame" x="133.5" y="408.5" width="108" height="30"/>
+                    <color key="backgroundColor" red="0.55634254220000001" green="0.97934550050000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <state key="normal" title="Facebook Login">
+                        <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
+                    </state>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="5"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                    <connections>
+                        <action selector="FBLoginButtonAction:" destination="-1" eventType="touchUpInside" id="JId-nN-XqF"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gkc-M1-UIn">
+                    <rect key="frame" x="16" y="20" width="34" height="30"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <state key="normal" title="Back">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
+                    <connections>
+                        <action selector="backButtonAction:" destination="-1" eventType="touchUpInside" id="l91-gY-d27"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="Kcc-Xf-KNl" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="BES-40-knz"/>
-                <constraint firstItem="Kcc-Xf-KNl" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="lfu-Ba-85b"/>
-                <constraint firstItem="Kcc-Xf-KNl" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="ywC-BY-BjT"/>
+                <constraint firstItem="v9c-Fa-rFb" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Iah-oH-hoh"/>
+                <constraint firstItem="bDO-01-iRM" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="90" id="KlD-n1-AQj"/>
+                <constraint firstItem="YIs-nu-tgA" firstAttribute="top" secondItem="v9c-Fa-rFb" secondAttribute="bottom" constant="18" id="MIj-wo-b5d"/>
+                <constraint firstItem="1AJ-8M-kvn" firstAttribute="top" secondItem="bDO-01-iRM" secondAttribute="bottom" constant="25" id="PgE-47-bm6"/>
+                <constraint firstItem="YIs-nu-tgA" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="VgA-LA-IlO"/>
+                <constraint firstItem="1AJ-8M-kvn" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="f4D-6P-Nj6"/>
+                <constraint firstItem="bDO-01-iRM" firstAttribute="top" secondItem="XKO-qq-iRG" secondAttribute="bottom" constant="55" id="gs7-Jt-83x"/>
+                <constraint firstItem="Q5M-cg-NOt" firstAttribute="trailing" secondItem="bDO-01-iRM" secondAttribute="trailing" constant="90" id="kP5-TC-bIO"/>
+                <constraint firstItem="XKO-qq-iRG" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="oC2-hO-qw4"/>
+                <constraint firstItem="1AJ-8M-kvn" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="v4a-2J-C6I"/>
+                <constraint firstItem="v9c-Fa-rFb" firstAttribute="top" secondItem="1AJ-8M-kvn" secondAttribute="bottom" constant="18" id="xi3-Jh-rWE"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <point key="canvasLocation" x="136.80000000000001" y="100.29985007496252"/>
