Final commit before switching to a tab-bar controller for the different modes in the app;using storyboard throughout the rest of development will make everything a lot smoother in general.

--- a/Pitch/View Controllers/ExploreViewController.xib
+++ b/Pitch/View Controllers/ExploreViewController.xib
@@ -55,7 +55,7 @@
                 <constraint firstAttribute="trailing" secondItem="402-va-wqo" secondAttribute="trailing" constant="20" id="tij-a6-hp9"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
-            <point key="canvasLocation" x="137.68115942028987" y="130.58035714285714"/>
+            <point key="canvasLocation" x="140" y="103"/>
         </view>
     </objects>
     <resources>
