--- a/Pitch/Base.lproj/Main.storyboard
+++ b/Pitch/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ryD-lJ-dtx">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,6 +10,41 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Log In View Controller-->
+        <scene sceneID="BnE-yM-SU9">
+            <objects>
+                <viewController id="ryD-lJ-dtx" customClass="LogInViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Prw-pW-Jzn">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DnF-qo-7MZ">
+                                <rect key="frame" x="15" y="25" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="MFh-n9-PpG"/>
+                                    <constraint firstAttribute="height" constant="30" id="Pfx-cU-KoM"/>
+                                </constraints>
+                                <state key="normal" title="Back" image="back">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.37075540420000003" green="0.77097988129999995" blue="0.59605771299999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="DnF-qo-7MZ" firstAttribute="top" secondItem="Prw-pW-Jzn" secondAttribute="top" constant="25" id="NCr-Av-YdB"/>
+                            <constraint firstItem="DnF-qo-7MZ" firstAttribute="leading" secondItem="lxC-Xh-hFd" secondAttribute="leading" constant="15" id="PNa-BA-F3t"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="lxC-Xh-hFd"/>
+                    </view>
+                    <connections>
+                        <outlet property="backButton" destination="DnF-qo-7MZ" id="ojK-RA-djK"/>
+                        <segue destination="BYZ-38-t0r" kind="presentation" identifier="goToMain3VCs" id="BPY-0S-uRg"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="k3y-ym-4qz" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="154" y="-729"/>
+        </scene>
         <!--Master View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -83,6 +118,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="back" width="500" height="550"/>
         <image name="event" width="563" height="530"/>
         <image name="search" width="642" height="594"/>
         <image name="user" width="691" height="610"/>
