--- a/Pitch/View/DistanceCell.xib
+++ b/Pitch/View/DistanceCell.xib
@@ -12,31 +12,64 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DistanceCell" rowHeight="126" id="KGk-i7-Jjw" customClass="DistanceCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="126"/>
+        <tableViewCell contentMode="scaleAspectFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="DistanceCell" rowHeight="84" id="KGk-i7-Jjw" customClass="DistanceCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="84"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="125.5"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="83.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NKY-o4-fyc">
-                        <rect key="frame" x="5" y="5" width="63" height="18"/>
+                        <rect key="frame" x="5" y="5" width="63" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="Rd8-Q0-CMm"/>
+                        </constraints>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ecb-cP-j76">
+                        <rect key="frame" x="10" y="43.5" width="66" height="30"/>
+                        <color key="backgroundColor" red="0.37075540420000003" green="0.77097988129999995" blue="0.59605771299999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="vnX-sb-AuM"/>
+                        </constraints>
+                        <state key="normal" title="Less than">
+                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </state>
+                        <connections>
+                            <action selector="toggleButtonPressed:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="5kS-wh-dZd"/>
+                        </connections>
+                    </button>
+                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="5" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3wW-TZ-aMW">
+                        <rect key="frame" x="84" y="43.5" width="100" height="30"/>
+                        <color key="backgroundColor" red="0.38259750599999998" green="0.79456412789999997" blue="0.61566519740000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="100" id="7FX-lI-VKS"/>
+                        </constraints>
+                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <textInputTraits key="textInputTraits"/>
+                    </textField>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="Ecb-cP-j76" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="1g8-2V-R3D"/>
                     <constraint firstItem="NKY-o4-fyc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="Aqi-EF-Tig"/>
+                    <constraint firstItem="Ecb-cP-j76" firstAttribute="top" secondItem="NKY-o4-fyc" secondAttribute="bottom" constant="8.5" id="IXp-uA-E3s"/>
                     <constraint firstAttribute="trailing" secondItem="NKY-o4-fyc" secondAttribute="trailing" constant="252" id="Miv-jb-uZ5"/>
+                    <constraint firstItem="3wW-TZ-aMW" firstAttribute="centerY" secondItem="Ecb-cP-j76" secondAttribute="centerY" id="deS-Ik-LhE"/>
+                    <constraint firstAttribute="bottom" secondItem="Ecb-cP-j76" secondAttribute="bottom" constant="10" id="dfc-BO-aBQ"/>
+                    <constraint firstItem="3wW-TZ-aMW" firstAttribute="leading" secondItem="Ecb-cP-j76" secondAttribute="trailing" constant="8" id="uUv-GQ-Qy0"/>
                     <constraint firstItem="NKY-o4-fyc" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="vXf-r3-dP5"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
             <connections>
+                <outlet property="bottomConstraint" destination="H2p-sc-9uM" id="dx2-H7-2X9"/>
                 <outlet property="distanceLabel" destination="NKY-o4-fyc" id="g7E-fP-F2l"/>
+                <outlet property="distanceToggleButton" destination="Ecb-cP-j76" id="cOT-74-fEe"/>
             </connections>
-            <point key="canvasLocation" x="137.68115942028987" y="169.41964285714286"/>
+            <point key="canvasLocation" x="137.59999999999999" y="149.32533733133434"/>
         </tableViewCell>
     </objects>
 </document>
