--- a/Pitch/View/LocationCell.xib
+++ b/Pitch/View/LocationCell.xib
@@ -12,40 +12,42 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LocationCell" rowHeight="178" id="KGk-i7-Jjw" customClass="LocationCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="178"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LocationCell" rowHeight="300" id="KGk-i7-Jjw" customClass="LocationCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="300"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="177.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="299.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Event Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ffp-h1-PZs">
-                        <rect key="frame" x="5" y="5" width="105.5" height="119.5"/>
+                        <rect key="frame" x="5" y="5" width="105.5" height="42.5"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Pick a Location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="v5g-VH-sxO">
-                        <rect key="frame" x="10" y="132.5" width="300" height="40"/>
+                    <searchBar contentMode="redraw" placeholder="Search Locations" translatesAutoresizingMaskIntoConstraints="NO" id="7OQ-mW-IeS">
+                        <rect key="frame" x="10" y="55.5" width="300" height="44"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="40" id="Mx6-Ai-akL"/>
+                            <constraint firstAttribute="height" constant="44" id="UCw-2f-Nf7"/>
                         </constraints>
-                        <nil key="textColor"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                         <textInputTraits key="textInputTraits"/>
-                    </textField>
+                    </searchBar>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="v5g-VH-sxO" secondAttribute="bottom" constant="5" id="VS8-hL-G3k"/>
-                    <constraint firstItem="v5g-VH-sxO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="bD6-pk-oN2"/>
-                    <constraint firstAttribute="trailing" secondItem="v5g-VH-sxO" secondAttribute="trailing" constant="10" id="frI-4n-cw4"/>
+                    <constraint firstItem="7OQ-mW-IeS" firstAttribute="top" secondItem="ffp-h1-PZs" secondAttribute="bottom" constant="8" id="AQk-Cm-Nbt"/>
+                    <constraint firstAttribute="bottom" secondItem="7OQ-mW-IeS" secondAttribute="bottom" constant="200" id="Tw3-ji-8rx"/>
+                    <constraint firstItem="7OQ-mW-IeS" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="WsO-5p-8Ia"/>
+                    <constraint firstAttribute="trailing" secondItem="7OQ-mW-IeS" secondAttribute="trailing" constant="10" id="bJO-KA-YJ9"/>
                     <constraint firstItem="ffp-h1-PZs" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="5" id="g0g-iY-Usd"/>
-                    <constraint firstItem="v5g-VH-sxO" firstAttribute="top" secondItem="ffp-h1-PZs" secondAttribute="bottom" constant="8" id="sxP-a6-uzv"/>
+                    <constraint firstItem="7OQ-mW-IeS" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="hUf-eV-fGC"/>
                     <constraint firstItem="ffp-h1-PZs" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="xHl-jB-cWT"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="aW0-zy-SZf"/>
-            <point key="canvasLocation" x="137.68115942028987" y="180.80357142857142"/>
+            <connections>
+                <outlet property="locationCellSearchBar" destination="7OQ-mW-IeS" id="jWm-SD-9WO"/>
+            </connections>
+            <point key="canvasLocation" x="137.68115942028987" y="312.38839285714283"/>
         </tableViewCell>
     </objects>
 </document>
